--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.3.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
     "prisma": "^6.3.0"
