--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "prisma": "^6.3.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
