--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "repository": {
     "type": "git",
@@ -29,6 +34,8 @@
     "prisma": "^6.3.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.7",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
   }
 }
